--- a/index.html
+++ b/index.html
@@ -152,10 +152,14 @@
             <h4>About Us</h4>
             <p>TapTech Dream IT is an organization which provide IT solutions to its customers as well as support them.<br>It also offers some courses so that the IT knowledge spread among the people.<br>Customers satisfaction is our reputation.</p>
             <div class="icons">
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-linkedin"></i>
-                <i class="fab fa-twitter-square"></i>
+                <a href="https://web.facebook.com/mondol.shashwata/" target="blank">
+                <i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.linkedin.com/in/shashata-kumar-mondol-247493153/" target="blank">
+                <i class="fab fa-instagram-square"></i></a>
+                <a href="https://www.linkedin.com/in/shashata-kumar-mondol-247493153/" target="blank">
+                <i class="fab fa-linkedin"></i></a>
+                <a href="https://web.facebook.com/mondol.shashwata/" target="blank">
+                <i class="fab fa-twitter-square"></i></a>
             </div>
             <p>Made with <i class="far fa-heart"></i> by Shashata</p>
         </section>
